{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 15,
  "lineage": "b09826bc-8dc7-e49c-e725-6869248e9b06",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "universal_links_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.160.113.136",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-07-14T16:27:29.902-07:00",
            "id": "projects/trackrat-prod/global/addresses/trackrat-links-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "trackrat-links-ip",
            "prefix_length": 0,
            "project": "trackrat-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/addresses/trackrat-links-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "universal_links_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/trackrat-prod/global/forwardingRules/trackrat-links-http",
            "ip_address": "34.160.113.136",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "trackrat-links-http",
            "port_range": "80-80",
            "project": "trackrat-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/forwardingRules/trackrat-links-http",
            "target": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/targetHttpProxies/trackrat-links-http-proxy"
          },
          "dependencies": [
            "google_compute_global_address.universal_links_ip",
            "google_compute_target_http_proxy.universal_links_http_proxy",
            "google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "universal_links_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/trackrat-prod/global/forwardingRules/trackrat-links-https",
            "ip_address": "34.160.113.136",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "trackrat-links-https",
            "port_range": "443-443",
            "project": "trackrat-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/forwardingRules/trackrat-links-https",
            "target": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/targetHttpsProxies/trackrat-links-https-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.universal_links_backend",
            "google_compute_global_address.universal_links_ip",
            "google_compute_managed_ssl_certificate.universal_links_cert",
            "google_compute_target_https_proxy.universal_links_proxy",
            "google_compute_url_map.universal_links",
            "google_storage_bucket.universal_links",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "universal_links_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-14T16:27:41.330-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/trackrat-prod/global/targetHttpProxies/trackrat-links-http-proxy",
            "name": "trackrat-links-http-proxy",
            "project": "trackrat-prod",
            "proxy_bind": false,
            "proxy_id": 2920011275341147266,
            "self_link": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/targetHttpProxies/trackrat-links-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/urlMaps/trackrat-https-redirect"
          },
          "dependencies": [
            "google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "universal_links_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-14T16:27:54.934-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/trackrat-prod/global/targetHttpsProxies/trackrat-links-https-proxy",
            "name": "trackrat-links-https-proxy",
            "project": "trackrat-prod",
            "proxy_bind": false,
            "proxy_id": 7532956578179722389,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/targetHttpsProxies/trackrat-links-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/sslCertificates/trackrat-links-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/urlMaps/trackrat-links-map"
          },
          "dependencies": [
            "google_compute_backend_bucket.universal_links_backend",
            "google_compute_managed_ssl_certificate.universal_links_cert",
            "google_compute_url_map.universal_links",
            "google_storage_bucket.universal_links",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-14T16:27:29.949-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "PERMANENT_REDIRECT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "Av1xX3cUDls=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/trackrat-prod/global/urlMaps/trackrat-https-redirect",
            "map_id": 5166738045455051918,
            "name": "trackrat-https-redirect",
            "path_matcher": [],
            "project": "trackrat-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/urlMaps/trackrat-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "universal_links",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-14T16:27:43.524-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/backendBuckets/trackrat-links-backend",
            "default_url_redirect": [],
            "description": "URL map for TrackRat Universal Links",
            "fingerprint": "0c4g7pRcV_8=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/trackrat-prod/global/urlMaps/trackrat-links-map",
            "map_id": 8657128881672170624,
            "name": "trackrat-links-map",
            "path_matcher": [],
            "project": "trackrat-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/trackrat-prod/global/urlMaps/trackrat-links-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.universal_links_backend",
            "google_storage_bucket.universal_links",
            "random_id.bucket_suffix"
          ]
        }
      ]
    }
  ]
}